@@ -9,6 +9,7 @@ import org.apache.logging.log4j.Logger;
 
 import java.io.BufferedWriter;
 import java.io.IOException;
+import java.util.Date;
 import java.util.List;
 
 public class CurationAGMGenerator {
@@ -38,6 +39,7 @@ public class CurationAGMGenerator {
         log.info("START "+speciesName+" AGM file");
 
         CurationAGM curationAGM = new CurationAGM();
+        curationAGM.alliance_member_release_version = "v"+Utils2.formatDate2(new Date());
 
         // setup a JSON object array to collect all CurationAGM objects
         ObjectMapper json = new ObjectMapper();
