@@ -3,6 +3,7 @@ package edu.mcw.rgd.pipelines.agr;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import edu.mcw.rgd.datamodel.Gene;
+import edu.mcw.rgd.datamodel.RgdVariant;
 import edu.mcw.rgd.datamodel.SpeciesType;
 import edu.mcw.rgd.process.Utils;
 import org.apache.logging.log4j.LogManager;
@@ -10,23 +11,19 @@ import org.apache.logging.log4j.Logger;
 
 import java.io.BufferedWriter;
 import java.io.IOException;
-import java.util.*;
+import java.util.Date;
+import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 
-public class CurationGeneGenerator {
+public class CurationVariantGenerator {
 
     private Dao dao;
-    private Map<Integer, String> rgdId2HgncIdMap;
-
     Logger log = LogManager.getLogger("status");
 
     public void run() throws Exception {
 
         try {
-            rgdId2HgncIdMap = CurationObject.loadHgncIdMap(dao);
-
-            createGeneFile(SpeciesType.RAT);
-            createGeneFile(SpeciesType.HUMAN);
+            createVariantFile(SpeciesType.RAT);
 
         } catch( Exception e ) {
             Utils.printStackTrace(e, log);
@@ -37,43 +34,37 @@ public class CurationGeneGenerator {
         log.info("");
     }
 
-    void createGeneFile(int speciesTypeKey) throws Exception {
+    void createVariantFile(int speciesTypeKey) throws Exception {
 
         String speciesName = SpeciesType.getCommonName(speciesTypeKey).toUpperCase();
 
         log.info("START "+speciesName+" GENE file");
 
-        CurationGenes curationGenes = new CurationGenes();
-        curationGenes.alliance_member_release_version = "v"+Utils2.formatDate2(new Date());
+        CurationVariant curationVariants = new CurationVariant();
+        curationVariants.alliance_member_release_version = "v"+Utils2.formatDate2(new Date());
 
-        // setup a JSON object array to collect all CurationGene objects
+        // setup a JSON object array to collect all CurationVariant objects
         ObjectMapper json = new ObjectMapper();
         // do not export fields with NULL values
         json.setSerializationInclusion(JsonInclude.Include.NON_NULL);
 
-        AtomicInteger obsoleteGeneCount = new AtomicInteger(0);
+        AtomicInteger obsoleteVariantCount = new AtomicInteger(0);
 
-        Set<String> canonicalProteins = dao.getCanonicalProteins(speciesTypeKey);
+        List<RgdVariant> variants = dao.getVariantsForSpecies(speciesTypeKey);
+        log.info("  variants: "+variants.size());
 
-        List<Gene> genes = dao.getAllGenes(speciesTypeKey);
-        log.info("  genes: "+genes.size());
-        genes.parallelStream().forEach( g -> {
+        variants.parallelStream().forEach( v -> {
+
             String curie = null;
             if (speciesTypeKey == SpeciesType.RAT) {
-                curie = "RGD:" + g.getRgdId();
-            } else if (speciesTypeKey == SpeciesType.HUMAN) {
-                String hgncId = rgdId2HgncIdMap.get(g.getRgdId());
-                if (hgncId == null) {
-                    return;
-                }
-                curie = hgncId;
+                curie = "RGD:" + v.getRgdId();
             }
 
             try {
-                CurationGenes.GeneModel m = curationGenes.add(g, dao, curie, canonicalProteins);
+                CurationVariant.VariantModel m = curationVariants.add(v, dao, curie);
 
                 if (m.obsolete != null && m.obsolete == true) {
-                    obsoleteGeneCount.incrementAndGet();
+                    obsoleteVariantCount.incrementAndGet();
                 }
             } catch(Exception e) {
                 throw new RuntimeException(e);
@@ -81,21 +72,21 @@ public class CurationGeneGenerator {
         });
 
         // sort data, alphabetically by object symbols
-        curationGenes.sort();
+        curationVariants.sort();
 
-        // dump DafAnnotation records to a file in JSON format
+        // dump records to a file in JSON format
         try {
-            String jsonFileName = "CURATION_GENES-"+speciesName+".json";
+            String jsonFileName = "CURATION_VARIANT-"+speciesName+".json";
             BufferedWriter jsonWriter = Utils.openWriter(jsonFileName);
 
-            jsonWriter.write(json.writerWithDefaultPrettyPrinter().writeValueAsString(curationGenes));
+            jsonWriter.write(json.writerWithDefaultPrettyPrinter().writeValueAsString(curationVariants));
 
             jsonWriter.close();
         } catch(IOException ignore) {
         }
 
-        log.info("END "+speciesName+" gene file:  genes="+curationGenes.gene_ingest_set.size());
-        log.info("   obsolete gene count: "+obsoleteGeneCount.get());
+        log.info("END "+speciesName+" file:  variants="+curationVariants.variant_ingest_set.size());
+        log.info("   obsolete variant count: "+obsoleteVariantCount.get());
         log.info("");
     }
 
