@@ -1,5 +1,6 @@
 Nov 10, 2023
   CurationGeneGenerator - updated to schema 1.11.0
+  CurationVariantGenerator - created for schema 1.11.0
 
 Nov 09, 2023
   CurationAgmGenerator - updated to schema 1.11.0
